<resources>
    <string name="app_name">IndiaUdyogMart</string>
    <string name="coming_son">Coming Soon</string>
    <string name="noNetworkFound">You\'re not connected to the Internet. Please connect and retry. </string>
    <string name="msg_NO_INTERNET_RESPOND">Please connect your internet connection</string>
    <string name="msg_please_wait">Please wait …</string>
    <string name="msg_server_error">Something went wrong please try again</string>
    <string name="msg_press_back_twice">Double tab to back</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_ok">OK</string>
    <string name="str_or">OR</string>
    <string name="str_submit">Submit</string>
    <string name="hi">Hi</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string-array name="categoty">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
        <item>item5</item>
        <item>item6</item>
    </string-array>
    <string-array name="chquetype">
        <item>Cancel Cheque</item>

    </string-array>
    <string name="please_leav">Please leave your commnets and suggestions to help us improve.</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\nWhere does it come from?\u000D\nContrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.\n\nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\nWhere does it come from?\u000D\nContrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</string>
    <string name="indiaudhyogmart">IndiaUdyogMart</string>
    <string name="des">The Only One Stop E-Commerce Market</string>
    <string name="loginaccount">LOGIN ACCOUNT</string>
    <string name="username">Enter Email / Mobile</string>
    <string name="password">Enter Password</string>
    <string name="remember">Remember Me!</string>
    <string name="signin">SIGN IN</string>
    <string name="forget">Forgot Password?</string>
    <string name="donthaveaccount">Don\'t have an account?</string>
    <string name="createaacount">CREATE ACCOUNT</string>
    <string name="fullname">Enter Full Name</string>
    <string name="email">Enter Email Address</string>
    <string name="mobile">Enter Mobile Number</string>
    <string name="location">Enter Location</string>
    <string name="signup">SIGN UP</string>
    <string name="seller">SELLER</string>
    <string name="alredyaccount">Already have account?</string>
    <string name="login">LOG IN</string>
    <string name="buyer">BUYER</string>
    <string name="companydetails">COMPANY DETAILS</string>
    <string name="companyname">Company Name</string>
    <string name="comapnylocation">Company Loaction</string>
    <string name="comapnywebsite">Company Website</string>
    <string name="back">BACK</string>
    <string name="resetpassword">RESET PASSWORD</string>
    <string name="otp">ENTER OTP</string>
    <string name="enterotp">Enter OTP Here</string>
    <string name="submitotp">SUBMIT OTP</string>
    <string name="notrecive">Didn\'t receive?</string>
    <string name="resend">RESEND OTP</string>
    <string name="reenterpassword">Re Enter Password</string>
    <string name="submit">SUBMIT</string>
    <string name="indiaudhyogmartdashboard">IndiaUdyogMart</string>
    <string name="shop">Shop</string>
    <string name="nearto">Near to</string>
    <string name="surat">Surat</string>
    <string name="searchanything">Search Anything Here...</string>
    <string name="home">Home</string>
    <string name="Importantsupplier">Important Suppliers</string>
    <string name="browseindustries">View All Categories</string>
    <string name="postrequriment">Post Requirements</string>
    <string name="message">Messages</string>
    <string name="paywithindiauthyogmart">Pay With IndiaUdyogMart</string>
    <string name="managerequrirement">Manage Requirements</string>
    <string name="favorites">My Favourites</string>
    <string name="sellertools">Seller Tools</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help and Support</string>
    <string name="language">Choose Language</string>
    <string name="share">Share App</string>
    <string name="about">About IndiaUdyogMart</string>
    <string name="settings">Settings</string>
    <string name="selectsupplier">Select Supplier</string>
    <string name="logout">Logout</string>
    <string name="profilename">Akshar Dholakiya</string>
    <string name="profilenum">+91 9054298628</string>
    <string name="edit">Edit</string>
    <string name="sanitizer">Hand Sanitizer</string>
    <string name="mask">Face Mask</string>
    <string name="personalprotectivce">Personal Protective Equipment</string>
    <string name="faceshield">Face Shield</string>
    <string name="safety">Safety goggles</string>
    <string name="disposable">Disposable Gloves</string>
    <string name="medicalcaps">Madical Caps</string>
    <string name="title">Title</string>
    <string name="hazmatsuit">Hazmat Suit</string>
    <string name="viewall">View All</string>
    <string name="productname">Product Name</string>
    <string name="cosmetic_pv">Cosmetic Pvt. Ltd.</string>
    <string name="surat_india">Surat, India</string>
    <string name="available_i">Available in Surat</string>
    <string name="ml">250 / 100 ML</string>
    <string name="callnow">Call now</string>
    <string name="getletestprice">Get latest Price</string>
    <string name="searchandfindbase">Search and Find best Suitable products for you...</string>
    <string name="enterproductname">Enter Product Name</string>
    <string name="next">NEXT</string>
    <string name="companynamemessage">Shantinath Chemicals Pvt. Ltd.</string>
    <string name="owner">Shivam Jogani</string>
    <string name="manufacture">Manufacturing Style Product</string>
    <string name="messagedetails">Hi, Taroon Rupapreliya, IndiaUdhyogMart Give you best service...</string>
    <string name="date">1 Aug 20</string>
    <string name="call">2</string>
    <string name="messagetitle">I want to buy new chemicals Dyes.</string>
    <string name="messagedescription">Kindly send me price and other details.</string>
    <string name="quntity">Quantity :</string>
    <string name="quntityliter">55 Liters</string>
    <string name="requirement">Requirement Type :</string>
    <string name="requrimenttype">Business Use</string>
    <string name="paynow">Pay Now</string>
    <string name="finalize_de">Finalize\nDeal</string>
    <string name="payment_opt">Payment\nOptions</string>
    <string name="pay_securel">Pay\nSecurely</string>
    <string name="sellernumber">Seller Mobile Number</string>
    <string name="amount">Amount</string>
    <string name="paymentdetailsname">Shantinath chemicales</string>
    <string name="safe">100% Safe &amp; Secure Payments</string>
    <string name="userdetails">User Details</string>
    <string name="emailaddress">taroonrupareliya007@gmail.com</string>
    <string name="paymentdetails">abcd</string>
    <string name="pricedecimal">Rs. 100.00</string>
    <string name="credit_card">Credit Card or Debit Card</string>
    <string name="net_banking">Net Banking</string>
    <string name="wallet">Wallet</string>
    <string name="upi">UPI</string>
    <string name="paytm">Paytm</string>
    <string name="requirementtitle">Direct Orange Dyes</string>
    <string name="requirementdetails">12 suppliers Connected</string>
    <string name="closed">Closed</string>
    <string name="running">Running</string>
    <string name="favoritesitemdetails">Hand Sanitizer with liquid Form</string>
    <string name="getquotes">Get Quotes</string>
    <string name="primarydetails">Primary Details</string>
    <string name="verified">Verified</string>
    <string name="secondarydetails">Secondary Details</string>
    <string name="verifynow">Verify Now</string>
    <string name="entercompanyname">Enter Company Name</string>
    <string name="entergst">Enter GST Number</string>
    <string name="entercompanyaddress">Enter Company Address</string>
    <string name="entercontactersonname">Enter Contact Person Name</string>
    <string name="entercontact">Enter Contact Details</string>
    <string name="finish">FINISH</string>
    <string name="hindi">Hindi</string>
    <string name="gujarati">Gujarati</string>
    <string name="english">English</string>
    <string name="notificatio">NOTIFICATIONS</string>
    <string name="myproduct">My Products</string>
    <string name="myleads">My Leads</string>
    <string name="quntityproduct">85</string>
    <string name="productprice">500/-</string>
    <string name="orderid">Order Id : </string>
    <string name="buyer1">Buyer Name :</string>
    <string name="buyername">Akshar Dholakiya</string>
    <string name="delivered">Delivered</string>
    <string name="id">OD5646ADAD456</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="myaccount">My Account</string>
    <string name="Dashboard">Dashboard</string>
    <string name="myprofile">My Profile</string>
    <string name="buylead">Buy Leads</string>
    <string name="kyc">KYC</string>
    <string name="kycinfo">KYC Info</string>
    <string name="businessinfo">Business Info</string>
    <string name="forgethaveaccount">Did you get</string>
    <string name="Request">Request</string>
</resources>