<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_1"
            android:title="@string/home"
            />
        <item
            android:id="@+id/nav_supplier"
            android:icon="@drawable/ic_importantsuppliers_2"
            android:title="@string/Importantsupplier"
            />
        <item
            android:id="@+id/nav_industries"
            android:icon="@drawable/ic_browsebycat_3"
            android:title="@string/browseindustries"
            />
        <item
            android:id="@+id/nav_requirements"
            android:icon="@drawable/ic_postrequirement_4"
            android:title="@string/postrequriment" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message_5"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/myaccount" />
        <item
            android:id="@+id/nav_indiaudyogmart"
            android:icon="@drawable/ic_paywith_6"
            android:title="@string/paywithindiauthyogmart" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_managerequire_7"
            android:title="@string/managerequrirement" />
        <item
            android:id="@+id/nav_favorities"
            android:icon="@drawable/ic_myfav_8"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_sellertool_9"
            android:title="@string/sellertools" />



        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_10"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_Help"
            android:icon="@drawable/ic_helpnsupport_11"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_chooslang_12"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_shareapp_13"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_14"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting_15"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>