<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_5dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/mywhite">
        <ImageView
            android:id="@+id/product_img"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/my_product_image"/>
        <RelativeLayout
            android:id="@+id/rl_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/product_img"
            android:layout_centerInParent="true"
            android:paddingRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="8dp">
            <TextView
                android:id="@+id/orderid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderid"
                android:textSize="8dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textColor="@color/black"
                android:textSize="8dp" />
            <TextView
                android:id="@+id/product_name"
                android:layout_width="@dimen/_100dp"
                android:layout_height="wrap_content"
                android:text="@string/productname"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/orderid"
                android:lines="2"
                android:layout_marginTop="@dimen/_3dp"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/buyer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buyer1"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="3dp"
                android:textSize="8dp"
                android:textColor="@color/black"
                android:layout_below="@id/product_name"/>

            <TextView
                android:id="@+id/tv_buyer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/buyer_name"
                android:paddingLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_below="@id/product_name"
                android:text="@string/buyername"
                android:textColor="@color/black"
                android:textSize="8dp" />

            <TextView
                android:id="@+id/tv_qty"
                android:layout_width="@dimen/_25dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/product_name"
                android:layout_centerInParent="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_14sp"
                android:layout_marginLeft="15dp"
                android:text="@string/quntityproduct"/>
            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:textStyle="bold"
                android:layout_marginTop="3dp"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@id/tv_qty"
                android:textSize="@dimen/_13sp"
                android:textColor="@color/black"
                android:text="@string/productprice"/>


            <Button
                android:id="@+id/btn_delivered"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:text="@string/delivered"
                android:layout_centerInParent="true"
                android:textSize="9dp"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:background="@drawable/shop_button"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp">

                <Button
                    android:id="@+id/btn_accept"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:src="@drawable/menu_icon"
                    android:text="@string/accept"
                    android:textColor="@color/white"
                    android:background="@drawable/shop_button"
                    android:textSize="9dp"
                    >
                </Button>

                <Button
                    android:id="@+id/btn_reject"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/btn_accept"
                    android:background="@drawable/black_button"
                    android:src="@drawable/menu_icon"
                    android:text="@string/reject"
                    android:textColor="@color/white"
                    android:textSize="9dp"></Button>
            </RelativeLayout>


        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>