<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mywhite"
    tools:context=".login.Forget_Password">

    <ImageView
        android:id="@+id/iv_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/login" />

    <ImageView
        android:id="@+id/iv_2"
        android:layout_width="@dimen/_110dp"
        android:layout_height="@dimen/_110dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30dp"
        android:src="@drawable/whitelogo" />

    <TextView
        android:id="@+id/tv_mart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_2dp"
        android:text="@string/indiaudhyogmart"
        android:textColor="@color/black"
        android:textSize="@dimen/_25dp"
        android:textStyle="bold"></TextView>

    <TextView
        android:id="@+id/tv_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_mart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_2dp"
        android:text="@string/des"
        android:textColor="@color/mywhite"
        android:textSize="@dimen/_15dp"></TextView>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/ns_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_des"
      >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_contain"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="50dip"
        android:layout_marginTop="@dimen/_50dp"
        android:layout_marginRight="50dip"
        android:background="@drawable/round_shape"
        android:orientation="vertical"
        android:padding="@dimen/_20dp">

        <TextView
            android:id="@+id/tv_forgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/forget"
            android:textColor="@color/black"
            android:textSize="@dimen/_20dp"
            android:textStyle="bold"></TextView>

        <FrameLayout
            android:id="@+id/fl_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_toLeftOf="@+id/ll_contain"
            android:background="@drawable/round_shape_edittext">

            <ImageView
                android:id="@+id/iv3"
                android:layout_width="@dimen/_15dp"
                android:layout_height="@dimen/_40dp"
                android:layout_marginLeft="@dimen/_15dp"
                android:layout_marginTop="@dimen/_3dp"
                android:src="@drawable/mail"></ImageView>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40dp"
                android:layout_gravity="center"
                android:background="@drawable/edittext_background"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                android:paddingLeft="@dimen/_50dp"
                android:paddingRight="@dimen/_20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="13dp" />
        </FrameLayout>

        <Button
            android:id="@+id/btn_forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_background"
            android:text="@string/resetpassword"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_contain"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_donthaveaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/forgethaveaccount"
            android:textColor="@color/Gray"
            android:textSize="15dp"></TextView>

        <TextView
            android:id="@+id/tv_createaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/createaacount"
            android:textColor="@color/Black"
            android:textSize="15dp"
            android:textStyle="bold"></TextView>

    </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>